Put in a friendly warning due to the styling

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             <section id="gameContent" class="tabSection">
                 <!-- Used as the unifying component that changes the game mode -->
                 <div id="arcadeController">
+                    <span class="label label-danger">If popups don't scale correctly, zoom out to 75%</span>
                     <!-- Buttons To Switch Between Modes -->
                     <div class="row">
                         <div class="btn-group btn-group-md">
